/*
 * This file was generated by the Gradle 'init' task.
 */


plugins {
    id 'application'
    id 'java'
    id 'maven-publish'
    //id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'edu.sc.seis.launch4j' version '2.4.6'
}
apply plugin: 'application'
applicationDefaultJvmArgs = ["--illegal-access=permit"]

dependencies {
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'

    implementation('com.github.KaptainWutax:BiomeUtils:-SNAPSHOT')
            {
                transitive = false
            }
    implementation('com.github.KaptainWutax:FeatureUtils:-SNAPSHOT')
            {
                transitive = false
            }
    implementation('com.github.KaptainWutax:SeedUtils:-SNAPSHOT')
            {
                transitive = false
            }
    implementation('com.github.KaptainWutax:MathUtils:-SNAPSHOT')
            {
                transitive = false
            }

    implementation('com.github.KaptainWutax:MCUtils:-SNAPSHOT')
            {
                transitive = false
            }
    implementation('com.github.KaptainWutax:TerrainUtils:main-SNAPSHOT')
            {
                transitive = false
            }
    implementation('com.github.KaptainWutax:NoiseUtils:main-SNAPSHOT')
            {
                transitive = false

            }
    implementation('com.seedfinding:mc_core:LATEST') { transitive = false }
    implementation('com.seedfinding:mc_math:LATEST') { transitive = false }
    implementation('com.seedfinding:mc_seed:LATEST') { transitive = false }
    implementation('com.seedfinding:mc_biome:533cdb5ed955ff1c3106f9901aea6aa5b08fd781') { transitive = false }
    implementation('com.seedfinding:mc_feature:LATEST') { transitive = false }
    implementation('com.seedfinding:mc_noise:LATEST') { transitive = false }
    implementation('com.seedfinding:mc_terrain:LATEST') { transitive = false }
    //compile 'com.jfoenix:jfoenix:9.0.10'

}


group = 'sassa'
version = 'v0.6.3'
sourceCompatibility = '1.8'
String stringVersion = version

//javafx {
//    version = "11.0.2"
//    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
//}

application {
    mainClassName = 'sassa.main.Main'
}
jar {
    manifest {
        attributes 'Main-Class': 'sassa.main.Main'
    }
    from {
        configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

launch4j {
    mainClassName = 'sassa.main.Main'
    outfile = group + "-" + stringVersion + ".exe"
    icon = "${projectDir}/src/main/resources/sassa/sassa.ico"
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://jitpack.io')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2')
    }

    maven { url "https://maven-snapshots.seedfinding.com" }
    //maven { url "https://maven.seedfinding.com" }
}

task buildAll(type: GradleBuild) {
    tasks = ['jar', 'createExe', 'assemble']
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}
